# android_native_prefab_demo

./: README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
zgjlib/: build.gradle
zgjlib/src/main/: AndroidManifest.xml
zgjlib/src/main/cpp/: CMakeLists.txt  student.cpp
zgjlib/src/main/cpp/include/: student.h
